Test/errors/circular/entry_self.cb
import "entry_self.cb";

extern int main()
{
    return 0;
}
